--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
         <h2 style="text-align:center;color:black;">Secion de PlayStation</h2>
         <br>
         <p style="color:black;text-align:center;">
+          <b>
           PlayStation es una videoconsola de sobremesa de 32 bits lanzada por Sony Computer Entertainment el 3 de diciembre de 1994 en Japon.
-          Se considera la videoconsola mas exitosa de la quinta generacion tanto en ventas como en popularidad.
+          Se considera la videoconsola mas exitosa de la quinta generacion tanto en ventas como en popularidad.</b>
           <br>
           <div align="center">
             <table>
