--- a/index.html
+++ b/index.html
@@ -1,199 +1,204 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Gamers</title>
-  <link rel="stylesheet" type="text/css" href="css/estetica.css">
-  <link rel="icon" type="image/x-icon" href="img/pacman.jpeg">
-  <link rel="stylesheet" href="fontello.css">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="articulacion.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://use.fontawesome.com/d8350ebb3a.js"></script>
-
-</head>
-<body style="margin: 0">
-  <div class="arriba">
-    <span class="icon icon-up-open"></span>
-  </div>
-  <img alt="full screen background imagepong"src="img/fondoppal.gif" id="full-screen-background-imagepong">
-  <nav style="margin:0;" class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">Home</a>
+  <head>
+    <meta charset="utf-8">
+    <title>Gamers</title>
+    <link rel="stylesheet" type="text/css" href="css/estetica.css">
+    <link rel="icon" type="image/x-icon" href="img/pacman.jpeg">
+    <link rel="stylesheet" href="fontello.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="articulacion.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/d8350ebb3a.js"></script>
+  </head>
+  <body>
+    <div class="arriba">
+      <span class="icon icon-up-open"></span>
+    </div>
+    <img alt="full screen background imagepong"src="img/fondoppal.gif" class="full-screen-background-imagepong">
+    <nav style="margin:0;" class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">Home</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="#xbox">Xbox</a></li>
+          <li><a href="#ps">PlayStation</a></li>
+          <li><a href="#pc">PC</a></li>
+          <li><a href="#nintendo">Nintendo</a></li>
+          <li><a href=""> Musica </a>
+            <ul><li>
+              <audio id="player" controls >
+                <source src="audio/E1M1.mp3" type="audio/mpeg" >
+              </audio>
+              <button class="btn btn-success" id="shuffle"><i class="fa fa-random"></i></button>
+              <ul class="list-group" id="playlist"></ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
-      <ul class="nav navbar-nav">
-        <li><a href="#xbox">Xbox</a></li>
-        <li><a href="#ps">PlayStation</a></li>
-        <li><a href="#pc">PC</a></li>
-        <li><a href="#nintendo">Nintendo</a></li>
-        <li><a href=""> Musica </a>
-          <ul><li>
-            <audio id="player" controls >
-              <source src="audio/E1M1.mp3" type="audio/mpeg" >
-            </audio>
-            <button class="btn btn-success" id="shuffle"><i class="fa fa-random"></i></button>
-            <ul class="list-group" id="playlist"></ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div id="general">
-    <div id="titulo">
-      <h1 style="margin:0;padding:0;padding-bottom:100px;padding-top:100px;">Pagina de Video Juegos</h1>
-    </div>
-    <div id="xbox">
-      <h2 style="color:green;margin:0;text-align:center;">Secion de Xbox</h2>
-      <br>
-      <p style="text-align:center;">Xbox fue la primera videoconsola de sobremesa producida por Microsoft, en colaboracion con Intel.
-        Su principal caracteristica es su procesador central basado en el procesador Intel Pentium III.
-        <br><br><br><br><br><br>
-        <div align="center">
-          <table>
-            <tr>
-              <td>
-                <div id="textoX">
-                  <p>
-                    Dale click a la imagen de Xbox para que veas un repertorio de los juegos de xbox
-                  </p>
-                </div>
-              </td>
-              <td>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              </td>
-              <td><a href="xbox/index.html" target="_blank"><img id="imagenXbox"src="img/xbox.jpeg" alt="xbox"></a></td>
-            </tr>
-          </table>
-          <br>
-          <div>
+    </nav>
+    <div class="general">
+      <div class="titulo">
+        <h1 class="head1" >Pagina de Video Juegos</h1>
+      </div>
+      <div class="xbox">
+        <h2 class="titleX">Secion de Xbox</h2>
+        <br>
+        <p class="textX">Xbox fue la primera videoconsola de sobremesa producida por Microsoft, en       colaboracion con Intel.
+          Su principal caracteristica es su procesador central basado en el procesador Intel Pentium III.
+          <br><br><br><br><br><br>
+          <div align="center">
+            <table>
+              <tr>
+                <td>
+                  <div clas="textoX">
+                    <p class="textX">
+                      Dale click a la imagen de Xbox para que veas un repertorio de los juegos de xbox
+                    </p>
+                  </div>
+                </td>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td><a href="xbox/index.html" target="_blank">
+                  <img class="imagenXbox"src="img/xbox.jpeg" alt="xbox"></a>
+                </td>
+              </tr>
+            </table>
+            <br>
           </div>
-        </div>
-      </p>
-      <br><br><br><br><br><br><br>
-    </div>
-      <div style="padding: 100px;">
-      </div>
-      <div id="ps">
-        <h2 style="text-align:center;color:black;">Secion de PlayStation</h2>
-        <br>
-        <p style="color:black;text-align:center;">
-          PlayStation es una videoconsola de sobremesa de 32 bits lanzada por Sony Computer Entertainment el 3 de diciembre de 1994 en Japon.
-          Se considera la videoconsola mas exitosa de la quinta generacion tanto en ventas como en popularidad.
-          <br>
-          <div align="center">
-            <table>
-              <tr>
-                <td>
-                  <div class="textops">
-                    <p>
-                      Dale click a la imagen de ps para que veas un repertorio de los juegos de PlayStation
-                    </p>
-                  </div>
-                </td>
-                <td>
-                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </td>
-                <td><a href="ps/index.html" target="_blank"><img id="psimg" src="img/ps.jpg" alt="ps"></a></td>
-              </tr>
-            </table>
-            <br>
-        </div>
         </p>
+        <br><br><br><br><br><br><br>
       </div>
-      <div style="padding: 100px;">
-      </div>
-      <div id="pc">
-        <h2 style="text-align:center;color:blue;">Seccion de PC´s</h2>
-        <br>
-        <p style="color:white;text-align:center;">
-          Un videojuego o juego de video es un juego electrónico en el que una o más personas interactúan, por medio de un controlador,
-          con un dispositivo que muestra imágenes de video.1​ Este dispositivo electrónico, conocido genéricamente como «plataforma»,
-          puede ser una computadora, una máquina arcade, una videoconsola o un dispositivo portátil (un teléfono móvil, por ejemplo).
-          Los videojuegos son, año por año, una de las principales industrias del arte y el entretenimiento.
-          <br>
-          <div align="center">
-            <table>
-              <tr>
-                <td>
-                  <div style="color:white;">
-                    <p>
-                      Dale click a la imagen para que veas un repertorio de los juegos de PCs
-                    </p>
-                  </div>
-                </td>
-                <td>
-                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </td>
-                <td><a href="pc/index.html" target="_blank"><img id="textopc" src="img/pc.jpg" alt="pc"></a></td>
-              </tr>
-            </table>
-            <br>
+        <div class="separador">
         </div>
-        </p>
-      </div>
-      <div style="padding: 100px;">
-      </div>
-      <div id="nintendo">
-        <h2 style="text-align:center;color:white;">Seccion de Nintendo</h2>
-        <br>
-        <p style="color:white;text-align:center;">
-          Nintendo Co., Ltd, es una empresa multinacional dedicada al mercado de los videojuegos y a la electrónica de consumo; con sede en Kioto, Japón. Fue fundada el 23 de septiembre de 1889, por el japonés Fusajiro Yamauchi.6​
+        <div class="ps">
+          <h2 class="titlePs">Secion de PlayStation</h2>
           <br>
-          <div align="center">
-            <table style="width:100%;">
-              <tr>
-                <td>
-                  <div id="textonintendo">
-                    <p>
-                      Dale click a la imagen para que veas un repertorio de los juegos de Nintendo
-                    </p>
-                  </div>
-                </td>
-                <td>
-                </td>
-                <td><a href="nintendo/index.html" target="_blank"><img id="nintendomini" src="img/nintendo.jpg" alt="nintendo mini"></a></td>
-              </tr>
-            </table>
+          <p class="textps">
+            PlayStation es una videoconsola de sobremesa de 32 bits lanzada por Sony Computer Entertainment el 3 de diciembre de 1994 en Japon.
+            Se considera la videoconsola mas exitosa de la quinta generacion tanto en ventas como en popularidad.
             <br>
+            <div align="center">
+              <table>
+                <tr>
+                  <td>
+                    <div class="textops">
+                      <p>
+                        Dale click a la imagen de ps para que veas un repertorio de los juegos de PlayStation
+                      </p>
+                    </div>
+                  </td>
+                  <td>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  </td>
+                  <td><a href="ps/index.html" target="_blank">
+                        <img class="psimg" src="img/ps.jpg" alt="ps"></a>
+                  </td>
+                </tr>
+              </table>
+              <br>
+          </div>
+          </p>
         </div>
-        </p>
-      </div>
-      <div style="padding: 100px;">
-      </div>
-      <div>
-        <section id="contacto">
-          <div class="container">
-            <div class="row text-center espacio-arriba espacio-abajo">
-              <div class="col col-sm-4 col-sm-offset-4">
-                <h4 style="color:orange;"> Victor Manuel Florez Taborda</h4>
-                <span style="color:orange;">draimien424@gmail.com</span>
-                <hr>
-                <h4 style="color:orange;">Redes sociales</h4>
-                <table style="width:100%;">
-                  <tr>
-                    <td>
-                      <div class="red-s-icon face"><a href="https://www.facebook.com/victormanuel.floreztaborda" target="_blank"><i class="btn btn-social-icon btn-facebook fa fa-facebook-official fa-3x face"></i></a></div>
-                    </td>
-                    <td>
-                      <div class="red-s-icon twiter"><a href="https://twitter.com/login/" target="_blank"><i class="btn btn-social-icon btn-twitter fa fa-twitter fa-3x twiter "></i></a></div>
-                    </td>
-                    <td>
-                      <div class="red-s-icon insta"><a href="https://www.instagram.com/vitikor1378/" target="_blank"><i class="btn btn-social-icon btn-instagram fa fa-instagram fa-3x insta"></i></a></div>
-                    </td>
-                  </tr>
-                </table>
+        <div class="separador">
+        </div>
+        <div class="pc">
+          <h2 class="titlePc">Seccion de PC´s</h2>
+          <br>
+          <p class="textPC">
+            Un videojuego o juego de video es un juego electrónico en el que una o más personas interactúan, por medio de un controlador,
+            con un dispositivo que muestra imágenes de video.1​ Este dispositivo electrónico, conocido genéricamente como «plataforma»,
+            puede ser una computadora, una máquina arcade, una videoconsola o un dispositivo portátil (un teléfono móvil, por ejemplo).
+            Los videojuegos son, año por año, una de las principales industrias del arte y el entretenimiento.
+            <br>
+            <div align="center">
+              <table>
+                <tr>
+                  <td>
+                    <div style="color:white;">
+                      <p>
+                        Dale click a la imagen para que veas un repertorio de los juegos de PCs
+                      </p>
+                    </div>
+                  </td>
+                  <td>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  </td>
+                  <td><a href="pc/index.html" target="_blank">
+                    <img class="textopc" src="img/pc.jpg" alt="pc"></a>
+                  </td>
+                </tr>
+              </table>
+              <br>
+            </div>
+          </p>
+        </div>
+        <div class="separador">
+        </div>
+        <div class="nintendo">
+          <h2 class="titleNin">Seccion de Nintendo</h2>
+          <br>
+          <p class="textonint">
+            Nintendo Co., Ltd, es una empresa multinacional dedicada al mercado de los videojuegos y a la electrónica de consumo; con sede en Kioto, Japón. Fue fundada el 23 de septiembre de 1889, por el japonés Fusajiro Yamauchi.6​
+            <br>
+            <div align="center">
+              <table class="tablame">
+                <tr>
+                  <td>
+                    <div class="textonintendo">
+                      <p>
+                        Dale click a la imagen para que veas un repertorio de los juegos de Nintendo
+                      </p>
+                    </div>
+                  </td>
+                  <td>
+                    <a href="nintendo/index.html" target="_blank">
+                      <img class="nintendomini" src="img/nintendo.jpg" alt="nintendo mini">
+                    </a>
+                  </td>
+                </tr>
+              </table>
+              <br>
+            </div>
+          </p>
+        </div>
+        <div class="separador">
+        </div>
+        <div>
+          <section class="contacto">
+            <div class="container">
+              <div class="row text-center espacio-arriba espacio-abajo">
+                <div class="col col-sm-4 col-sm-offset-4">
+                  <h4 style="color:orange;"> Victor Manuel Florez Taborda</h4>
+                  <span style="color:orange;">draimien424@gmail.com</span>
+                  <hr>
+                  <h4 style="color:orange;">Redes sociales</h4>
+                  <table style="width:100%;">
+                    <tr>
+                      <td>
+                        <div class="red-s-icon face"><a href="https://www.facebook.com/victormanuel.floreztaborda" target="_blank"><i class="btn btn-social-icon btn-facebook fa fa-facebook-official fa-3x face"></i></a></div>
+                      </td>
+                      <td>
+                        <div class="red-s-icon twiter"><a href="https://twitter.com/login/" target="_blank"><i class="btn btn-social-icon btn-twitter fa fa-twitter fa-3x twiter "></i></a></div>
+                      </td>
+                      <td>
+                        <div class="red-s-icon insta"><a href="https://www.instagram.com/vitikor1378/" target="_blank"><i class="btn btn-social-icon btn-instagram fa fa-instagram fa-3x insta"></i></a></div>
+                      </td>
+                    </tr>
+                  </table>
+                </div>
               </div>
             </div>
-          </div>
-        </section>
+          </section>
+        </div>
       </div>
-    </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-</body>
+      <script src="js/jquery.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
