--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <a class="navbar-brand" href="index.html">Home</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="#xbox">Xbox</a></li>
-          <li><a href="#ps">PlayStation</a></li>
-          <li><a href="#pc">PC</a></li>
-          <li><a href="#nintendo">Nintendo</a></li>
+          <li><a href=".xbox">Xbox</a></li>
+          <li><a href=".ps">PlayStation</a></li>
+          <li><a href=".pc">PC</a></li>
+          <li><a href=".nintendo">Nintendo</a></li>
           <li><a href=""> Musica </a>
             <ul><li>
               <audio id="player" controls >
@@ -49,17 +49,16 @@
       <div class="xbox">
         <h2 class="titleX">Secion de Xbox</h2>
         <br>
-<<<<<<< HEAD
         <p class="textX">Xbox fue la primera videoconsola de sobremesa producida por Microsoft, en       colaboracion con Intel.
           Su principal caracteristica es su procesador central basado en el procesador Intel Pentium III.
           <br><br><br><br><br><br>
-=======
+
         <p style="color:black;text-align:center;">
           <b>
           PlayStation es una videoconsola de sobremesa de 32 bits lanzada por Sony Computer Entertainment el 3 de diciembre de 1994 en Japon.
           Se considera la videoconsola mas exitosa de la quinta generacion tanto en ventas como en popularidad.</b>
           <br>
->>>>>>> 70157374f5133e39c337bdb0b0dc870208f2d4eb
+
           <div align="center">
             <table>
               <tr>
