solucion error href de id

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <a class="navbar-brand" href="index.html">Home</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href=".xbox">Xbox</a></li>
-          <li><a href=".ps">PlayStation</a></li>
-          <li><a href=".pc">PC</a></li>
-          <li><a href=".nintendo">Nintendo</a></li>
+          <li><a href="#xbox">Xbox</a></li>
+          <li><a href="#ps">PlayStation</a></li>
+          <li><a href="#pc">PC</a></li>
+          <li><a href="#nintendo">Nintendo</a></li>
           <li><a href=""> Musica </a>
             <ul><li>
               <audio id="player" controls >
@@ -46,7 +46,7 @@
       <div class="titulo">
         <h1 class="head1" >Pagina de Video Juegos</h1>
       </div>
-      <div class="xbox">
+      <div class="xbox" id="xbox">
         <h2 class="titleX">Secion de Xbox</h2>
         <br>
         <p class="textX">Xbox fue la primera videoconsola de sobremesa producida por Microsoft, en       colaboracion con Intel.
@@ -78,7 +78,7 @@
       </div>
         <div class="separador">
         </div>
-        <div class="ps">
+        <div class="ps" id="ps">
           <h2 class="titlePs">Secion de PlayStation</h2>
           <br>
           <p class="textps">
@@ -109,7 +109,7 @@
         </div>
         <div class="separador">
         </div>
-        <div class="pc">
+        <div class="pc" id="pc">
           <h2 class="titlePc">Seccion de PC´s</h2>
           <br>
           <p class="textPC">
@@ -142,7 +142,7 @@
         </div>
         <div class="separador">
         </div>
-        <div class="nintendo">
+        <div class="nintendo" id="nintendo">
           <h2 class="titleNin">Seccion de Nintendo</h2>
           <br>
           <p class="textonint">
